--- a/src/app/features/courses/containers/courses/courses.component.html
+++ b/src/app/features/courses/containers/courses/courses.component.html
@@ -12,11 +12,6 @@
         <input [formControl]="filter" type="text" class="form-control px-5" placeholder="Search..." />
       </div>
 
-      <!-- <div *ngIf="filteredCourses.length === 0 && filter.touched && filter.dirty" class="mt-2 px-1"
-                style="display: block; width: 100%">
-                Courses not found
-            </div> -->
-
       <div class="m-3 d-flex justify-content-end">
         <button type="button" class="btn btn-primary" routerLink="/courses/add">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg"
@@ -31,29 +26,14 @@
     <div class="card mx-3 mb-3">
       <div class="card-header">List of courses:</div>
 
-      <ul class="list-group list-group-flush">
-        <!-- <ng-container *ngIf="filteredCourses.length > 0; else defaultList">
-                    <app-courses-list-item 
-                        *ngFor="let course of filteredCourses" 
-                        [course]="course"
-                        (deleteCourse)="deleteCourse($event)">
-                    </app-courses-list-item>
-                </ng-container>
-    
-                <ng-template #defaultList>
-                    <app-courses-list-item 
-                        appHighlighting
-                        [appHighlighting]="course.date"
-                        *ngFor="let course of courses" 
-                        [course]="course"
-                        (deleteCourse)="deleteCourse($event)">
-                    </app-courses-list-item>
-                </ng-template>   -->
-
-        <app-courses-list-item *ngFor="let course of filteredCourses || courses" [course]="course"
-          (deleteCourse)="deleteCourse($event)" appHighlighting [appHighlighting]="course.date">
-        </app-courses-list-item>
-      </ul>
+      <ng-container *ngIf="(courses$ | async) as courses">
+        <ul class="list-group list-group-flush">
+          <app-courses-list-item *ngFor="let course of filteredCourses || courses" [course]="course"
+            (deleteCourse)="deleteCourse($event)" appHighlighting [appHighlighting]="course.date">
+          </app-courses-list-item>
+        </ul>
+  
+      </ng-container>
 
       <div class="list-group-item d-flex justify-content-center" *ngIf="!isCoursesFill">
         <button type="button" class="btn btn-primary m-2 text-uppercase p-2" style="float: right; color: white"
@@ -78,6 +58,6 @@
     </div>
   </div>
 </ng-container>
-
-
+ 
+  <app-loader *ngIf="isLoading$  | async"></app-loader>
 
